--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <ul class="sidebar-nav">
-  <li><a href="#">Home page</a></li>
-  <li><a href="#">Manufacturers</a></li>
-  <li><a href="#">Cars</a></li>
-  <li><a href="#">Drivers</a></li>
+  <li><a href="{% url 'taxi:index' %}">Home page</a></li>
+  <li><a href="{% url 'taxi:car_list' %}">Cars</a></li>
+  <li><a href="{% url 'taxi:manufacturer_list' %}">Manufacturers</a></li>
+  <li><a href="{% url 'taxi:driver_list' %}">Drivers</a></li>
 </ul>
