--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,6 +1,22 @@
-<ul class="sidebar-nav">
-  <li><a href="{% url 'taxi:index' %}">Home page</a></li>
-  <li><a href="{% url 'taxi:car_list' %}">Cars</a></li>
-  <li><a href="{% url 'taxi:manufacturer_list' %}">Manufacturers</a></li>
-  <li><a href="{% url 'taxi:driver_list' %}">Drivers</a></li>
+<ul class="nav flex-column bg-light rounded shadow-sm">
+  <li class="nav-item mb-2">
+    <a href="{% url 'taxi:index' %}" class="nav-link text-dark fw-bold">
+      🏠 Home page
+    </a>
+  </li>
+  <li class="nav-item mb-2">
+    <a href="{% url 'taxi:car_list' %}" class="nav-link text-dark">
+      🚗 Cars
+    </a>
+  </li>
+  <li class="nav-item mb-2">
+    <a href="{% url 'taxi:manufacturer_list' %}" class="nav-link text-dark">
+      🏭 Manufacturers
+    </a>
+  </li>
+  <li class="nav-item">
+    <a href="{% url 'taxi:driver_list' %}" class="nav-link text-dark">
+      👨‍✈️ Drivers
+    </a>
+  </li>
 </ul>
