--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,23 +1,33 @@
 {% if is_paginated %}
-  <ul class="pagination">
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a href="?page= {{ page_obj.previous_page_number }}" class="page-link">prev</a>
-      </li>
-    {% endif %}
+  <div class="container">
+    <nav aria-label="Page navigation">
+      <ul class="pagination mt-4">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">« Prev</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <span class="page-link">« Prev</span>
+          </li>
+        {% endif %}
 
+        <li class="page-item active">
+        <span class="page-link">
+          {{ page_obj.number }} / {{ paginator.num_pages }}
+        </span>
+        </li>
 
-    <li class="page-item active">
-      <span class="page-link">{{ page_obj.number }} of {{ paginator.num_pages }}</span>
-    </li>
-
-
-    {% if page_obj.has_next %}
-      <li class="page-item">
-        <a href="?page= {{ page_obj.next_page_number }}" class="page-link">next</a>
-      </li>
-
-
-    {% endif %}
-  </ul>
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next »</a>
+          </li>
+        {% else %}
+          <li class="page-item disabled">
+            <span class="page-link">Next »</span>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
+  </div>
 {% endif %}
