--- a/templates/taxi/index.html
+++ b/templates/taxi/index.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Taxi Service Home</h1>
-  <p>Welcome to Best Taxi Ever!</p>
-  <h2>Dynamic content</h2>
-  <p>The Taxi service has the following record counts:</p>
-  <ul>
-    <li><strong>Cars:</strong> {{ num_cars }}</li>
-    <li><strong>Drivers:</strong> {{ num_drivers }}</li>
-    <li><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
-  </ul>
+  <div class="container text-center">
+    <h1 class="mb-4">🚖 Welcome to Best Taxi Ever!</h1>
+    <p class="lead">Your trusted taxi service since forever.</p>
+    <hr>
+    <h2>📊 Service Stats</h2>
+    <ul class="list-group list-group-flush w-50 mx-auto">
+      <li class="list-group-item"><strong>Cars:</strong> {{ num_cars }}</li>
+      <li class="list-group-item"><strong>Drivers:</strong> {{ num_drivers }}</li>
+      <li class="list-group-item"><strong>Manufacturers:</strong> {{ num_manufacturers }}</li>
+    </ul>
+  </div>
 {% endblock %}
