--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -5,17 +5,17 @@
     </a>
   </li>
   <li class="nav-item mb-2">
-    <a href="{% url 'taxi:car_list' %}" class="nav-link text-dark">
+    <a href="{% url 'taxi:car-list' %}" class="nav-link text-dark">
       🚗 Cars
     </a>
   </li>
   <li class="nav-item mb-2">
-    <a href="{% url 'taxi:manufacturer_list' %}" class="nav-link text-dark">
+    <a href="{% url 'taxi:manufacturer-list' %}" class="nav-link text-dark">
       🏭 Manufacturers
     </a>
   </li>
   <li class="nav-item">
-    <a href="{% url 'taxi:driver_list' %}" class="nav-link text-dark">
+    <a href="{% url 'taxi:driver-list' %}" class="nav-link text-dark">
       👨‍✈️ Drivers
     </a>
   </li>
