--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -11,7 +11,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{ driver.username }}</h5>
                 <p class="card-text">License: {{ driver.license_number }}</p>
-                <a href="{% url 'taxi:driver_detail' driver.id %}" class="btn btn-primary btn-sm">View Details</a>
+                <a href="{% url 'taxi:driver-detail' driver.id %}" class="btn btn-primary btn-sm">View Details</a>
               </div>
             </div>
           </div>
